Use and display short description for associated products

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -2650,6 +2650,7 @@ table.cart .cart-item-row .qty-input {
 }
 .product-variant-line .variant-description {
 	margin: 5px 0;
+    clear: both;
 }
 .control-label.required {
 	color: inherit;
