Added a new product property "Visible individually". Enable it if you want a product to be visible in catalog or search results. You can use this field (just uncheck) to hide associated products from catalog and make them accessible only from a parent "grouped" product details page.

--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -316,11 +316,20 @@
         </tr>
         <tr>
             <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.ProductTypeId):
+                @Html.SmartLabelFor(model => model.ProductTypeId)
             </td>
             <td class="adminData">
                 @Html.DropDownListFor(model => model.ProductTypeId, ((ProductType)Model.ProductTypeId).ToSelectList())
                 @Html.ValidationMessageFor(model => model.ProductTypeId)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.VisibleIndividually)
+            </td>
+            <td class="adminData">
+                @Html.EditorFor(model => model.VisibleIndividually)
+                @Html.ValidationMessageFor(model => model.VisibleIndividually)
             </td>
         </tr>
         <tr>
