If there's no associated products, then just display a notification on "Grouped" product details page

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -2652,6 +2652,9 @@ table.cart .cart-item-row .qty-input {
 	margin: 5px 0;
     clear: both;
 }
+.product-details-page .no-associated-products {
+    font-weight: bold;
+}
 .control-label.required {
 	color: inherit;
 	font-weight: bold;
