--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/BulkEdit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/BulkEdit.cshtml
@@ -43,6 +43,14 @@
             </td>
         </tr>
         <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.SearchProductTypeId):
+            </td>
+            <td class="adminData">
+                @Html.DropDownList("SearchProductTypeId", Model.AvailableProductTypes)
+            </td>
+        </tr>
+        <tr>
             <td colspan="2">
                 <button type="submit" id="search-products" value="search-products" class="t-button">@T("Admin.Common.Search")</button>
             </td>
@@ -139,7 +147,8 @@
             var searchModel = {
                 SearchProductName: $('#@Html.FieldIdFor(model => model.SearchProductName)').val(),
                 SearchCategoryId: $('#SearchCategoryId').val(),
-                SearchManufacturerId: $('#SearchManufacturerId').val()
+                SearchManufacturerId: $('#SearchManufacturerId').val(),
+                SearchProductTypeId: $('#SearchProductTypeId').val()
             };
             e.data = searchModel;
         }
@@ -150,6 +159,7 @@
         e.values["SearchProductName"] = $('#@Html.FieldIdFor(model => model.SearchProductName)').val();
         e.values["SearchCategoryId"] = $('#SearchCategoryId').val();
         e.values["SearchManufacturerId"] = $('#SearchManufacturerId').val();
+        e.values["SearchProductTypeId"] = $('#SearchProductTypeId').val();
     }
 </script>
             </td>
