Order list can be searched by tracking number

--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/ProductAddPopup.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/ProductAddPopup.cshtml
@@ -56,7 +56,7 @@
         </tr>
         <tr>
             <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.SearchProductTypeId):
+                @Html.SmartLabelFor(model => model.SearchProductTypeId)
             </td>
             <td class="adminData">
                 @Html.DropDownList("SearchProductTypeId", Model.AvailableProductTypes)
