--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentList.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentList.cshtml
@@ -43,6 +43,14 @@
             </td>
         </tr>
         <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.TrackingNumber)
+            </td>
+            <td class="adminData">
+                @Html.EditorFor(model => Model.TrackingNumber)
+            </td>
+        </tr>
+        <tr>
             <td colspan="2">
                 <button type="submit" id="btnSearch" class="btn"><i class="icon-search"></i>&nbsp;@T("Admin.Common.Search")</button>
             </td>
@@ -143,9 +151,10 @@
 
         function onDataBinding(e) {
             var searchModel = {
-                    StartDate: $('#@Html.FieldIdFor(model => model.StartDate)').val(),
-                    EndDate: $('#@Html.FieldIdFor(model => model.EndDate)').val()
-                    };
+                StartDate: $('#@Html.FieldIdFor(model => model.StartDate)').val(),
+                EndDate: $('#@Html.FieldIdFor(model => model.EndDate)').val(),
+                TrackingNumber: $('#@Html.FieldIdFor(model => model.TrackingNumber)').val()
+            };
             e.data = searchModel;
         }
     
