--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
@@ -281,8 +281,9 @@
 					})
 					.Columns(columns => {
 						columns.Bound(x => x.ProductName)
-							.Width(500)
-							.ReadOnly();
+                            .ReadOnly()
+                            .Template(x => Html.ActionLink(x.ProductName, "Edit", "Product", new { id = x.ProductId }, new { }))
+                            .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Product/Edit/") + "<#= ProductId #>\"><#= ProductName #></a>");
 						columns.Bound(x => x.IsFeaturedProduct)
 							.Width(100)
 							.Template(item => @Html.SymbolForBool(item.IsFeaturedProduct))
