--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.AssociatedProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.AssociatedProducts.cshtml
@@ -35,7 +35,9 @@
                             columns.Bound(x => x.Id)
                                 .ReadOnly();
                             columns.Bound(x => x.ProductName)
-                                .ReadOnly();
+                                .ReadOnly()
+                                .Template(x => Html.ActionLink(x.ProductName, "Edit", "Product", new { id = x.Id }, new { }))
+                                .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Product/Edit/") + "<#= Id #>\"><#= ProductName #></a>");
                             columns.Bound(x => x.DisplayOrder)
                                 .Centered();
                             columns.Command(commands =>
