--- a/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerAll.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerAll.cshtml
@@ -19,12 +19,12 @@
             @if (Model.Count > 0)
             {
                 @(Html.DataList<ManufacturerModel>(Model, 3,
-                    @<div class="manufacturer-item">
+                    @<div class="item-box manufacturer-item">
                         <h2 class="man-title">
                             <a href="@Url.RouteUrl("Manufacturer", new { SeName = item.SeName })" title="@item.PictureModel.Title">
                                 @item.Name</a>
                         </h2>
-                        <div class="picture">
+                        <div class="picture" data-equalized-part="picture">
                             <a href="@Url.RouteUrl("Manufacturer", new { SeName = item.SeName })" title="@item.PictureModel.Title">
                                 <img alt="@item.PictureModel.AlternateText" src="@item.PictureModel.ImageUrl" title="@item.PictureModel.Title" /></a>
                         </div>
