Product\ProductVariant refactored the result of a regular expression search of "ProductVariant"

--- a/src/Presentation/SmartStore.Web/Administration/Views/Discount/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Discount/_CreateOrUpdate.cshtml
@@ -151,7 +151,7 @@
                 }
                 else
                 {
-                    @T("Admin.Promotions.Discounts.Fields.AppliedToProductVariants.NoRecords")
+                    @T("Admin.Promotions.Discounts.Fields.AppliedToProducts.NoRecords")
                 }
             </td>
         </tr>
