--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.cshtml
@@ -9,11 +9,11 @@
 @Html.SmartStore().TabStrip().Name("product-edit").Style(TabsStyle.Tabs).Position(TabsPosition.Left).Items(x =>
 {
     x.Add().Text(T("Admin.Catalog.Products.Info").Text)
-        .Content(TabInfo())
         .Icon("icon-pencil")
+        .Content(TabInfo())
         .Selected(true);
     x.Add().Text(T("Admin.Common.SEO").Text)
-        .Icon("icon-signal")
+        .Icon("icon-globe")
         .Content(TabSeo());
     x.Add().Text(T("Admin.Catalog.Products.Pictures").Text)
         .Icon("icon-picture")
@@ -25,30 +25,35 @@
         .Icon("icon-truck")
         .Content(TabManufacturers());
     x.Add().Text(T("Admin.Catalog.Products.TierPrices").Text)
+        .Icon("icon-signal")
         .Content(TabTierPrices());
     x.Add().Text(T("Admin.Catalog.Products.Discounts").Text)
+        .Icon("icon-signal")
         .Content(TabDiscounts());    
     x.Add().Text(T("Admin.Catalog.Products.SpecificationAttributes").Text)
         .Icon("icon-reorder")
         .Content(TabSpecificationAttributes());
     x.Add().Text(T("Admin.Catalog.Products.ProductVariantAttributes.Attributes").Text)
+        .Icon("icon-list-alt")
         .Content(TabAttributes());
     x.Add().Text(T("Admin.Catalog.Products.ProductVariantAttributes.AttributeCombinations").Text)
+        .Icon("icon-list-alt")
         .Content(TabAttributeCombinations());    
     x.Add().Text(T("Admin.Catalog.Products.Acl").Text)
         .Icon("icon-group")
         .Content(TabAcl());
 	x.Add().Text(T("Admin.Common.Stores").Text)
-        .Icon("icon-globe")    
+        .Icon("icon-globe")
         .Content(TabStores());
+    x.Add().Text(T("Admin.Catalog.Products.CrossSells").Text)
+        .Icon("icon-bullhorn")
+        .Content(TabCrossSells());    
     x.Add().Text(T("Admin.Catalog.Products.RelatedProducts").Text)
         .Icon("icon-link")
         .Content(TabRelatedProducts());
-    x.Add().Text(T("Admin.Catalog.Products.CrossSells").Text)
-        .Icon("icon-bullhorn")
-        .Content(TabCrossSells());
-    x.Add().Text(T("Admin.Catalog.Products.AssociatedProducts").Text).
-        Content(TabAssociatedProducts());
+    x.Add().Text(T("Admin.Catalog.Products.AssociatedProducts").Text)
+        .Icon("icon-link")
+        .Content(TabAssociatedProducts());
     
     //generate an event
     EngineContext.Current.Resolve<IEventPublisher>().Publish(new TabStripCreated(x, "product-edit", this.Html, this.Model));
@@ -101,13 +106,13 @@
 {
     @Html.Partial("_CreateOrUpdate.Stores", Model)
 }
-@helper TabRelatedProducts()
-{
-    @Html.Partial("_CreateOrUpdate.RelatedProducts", Model)
-}
 @helper TabCrossSells()
 {
     @Html.Partial("_CreateOrUpdate.CrossSells", Model)
+}
+@helper TabRelatedProducts()
+{
+    @Html.Partial("_CreateOrUpdate.RelatedProducts", Model)
 }
 @helper TabAssociatedProducts()
 {
