New setting to redirect to order detail page if order completed

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Order.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Order.cshtml
@@ -89,6 +89,15 @@
         </tr>
         <tr>
             <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.DisableOrderCompletedPage)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.DisableOrderCompletedPage)
+                @Html.ValidationMessageFor(model => model.DisableOrderCompletedPage)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.GiftCards_Activated_OrderStatusId)
             </td>
             <td class="adminData">
