--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.TierPrices.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.TierPrices.cshtml
@@ -42,6 +42,7 @@
     <script type="text/javascript">
         function onTierPriceEdit(e) {
             // codehint: sm-edit
+            $(e.form).find('#Store').select2('val', e.dataItem['StoreId']);
             $(e.form).find('#CustomerRole').select2('val', e.dataItem['CustomerRoleId']);
         }
     </script>
