Product\ProductVariant testing... solved several issues

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -20,6 +20,10 @@ legend {
 	background: transparent url('images/ajax_loader_small.gif') 50% 50% no-repeat;
 }
 
+.checkbox input[type="checkbox"] {
+    margin-top: 4px;
+}
+
 // required for placeholder plugin (< IE10)
 input.placeholder {
 	color: @grayLight !important;
@@ -1117,6 +1121,7 @@ form.form-search {
 .product-list .pl-slider{
 	overflow: hidden;
 	position: relative;
+    margin-top: 8px;
 }
 .product-list.scroll .pl-row{
 	width: 30000px;
