--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -425,3 +425,11 @@ input[type="color"],
 		margin-bottom: 0;
 	}
 }
+
+
+// 'summernote' html editor tweaks
+// -------------------------
+
+.note-editable {
+    background-color: #fff;
+}
